dnl ====================================================================
dnl   configure.in for RHEA
dnl ====================================================================
AC_PREREQ(2.61)
AC_INIT(rhea, 0.5.4, [acy@hiemalis.org])
AC_CONFIG_SRCDIR([m2x_main.cpp])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE


dnl =======================================
dnl   Checks for programs.
dnl =======================================
AC_PROG_CC
AC_PROG_CXX


dnl ===================================
dnl   Checks for libraries.
dnl ===================================


dnl ===================================
dnl   Checks for header files.
dnl ===================================


dnl ==================================================================
dnl   Checks for typedefs, structures, and compiler characteristics.
dnl ==================================================================
AC_C_CONST


dnl ==================================================================
dnl   Checks for library functions.
dnl ==================================================================
AC_HEADER_STDC




dnl =====================================
dnl   Output
dnl =====================================
AC_CONFIG_FILES([Makefile])
AC_OUTPUT


dnl EOF
